kube/core/deployment.dispatch-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch-web
  labels:
    app: dispatch-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatch-web
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: dispatch-web
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regsecret
      containers:
        - name: dispatch-web
          image: fiverr/dispatch:latest
          imagePullPolicy: IfNotPresent
          command: ["server", "start", "dispatch.main:app", "--host=0.0.0.0"]
          resources:
            requests:
              cpu: 150m
              memory: 1000Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 8000
              name: service-port
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8000
            timeoutSeconds: 1
            initialDelaySeconds: 120
            periodSeconds: 3
            failureThreshold: 10
            successThreshold: 1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatch
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /dispatch(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dispatch
                port:
                  number: 8000

---
kind: Service
apiVersion: v1
metadata:
  name: dispatch
  labels:
    app: dispatch-web
spec:
  selector:
    app: dispatch-web
  ports:
    - name: http
      port: 8000
